--- a/index.html
+++ b/index.html
@@ -4,24 +4,14 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
     <title>JeromeMT</title>
-
-    <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
-
-    <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet">
-
-    <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Template Main CSS File -->
+    <link href="assets/vendor/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/css/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
-
   </head>
 
   <body>
@@ -69,7 +59,8 @@
         </div>
 
       </div>
-    </header><!-- End Header -->
+    </header>
+    <!-- End Header -->
 
 
     <!-- ======= About Section ======= -->
@@ -134,7 +125,8 @@
 
       </div><!-- End About Me -->
 
-    </section><!-- End About Section -->
+    </section>
+    <!-- End About Section -->
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
@@ -147,75 +139,64 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                  developing user-centered digital/print marketing material from initial concept to final, polished
-                  deliverable.</em></p>
-              <span>
-                <ul>
-                  <li>Portland par 127,Orlando, FL</li>
-                  <li>(123) 456-7891</li>
-                  <li>alice.barkley@example.com</li>
-                </ul>
-              </span>
+            <div class="isolation">
+              <h3 class="resume-title">Sumary</h3>
+              <div class="resume-item pb-0">
+                <h4>Alice Barkley</h4>
+                <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
+                    developing user-centered digital/print marketing material from initial concept to final, polished
+                    deliverable.</em></p>
+                <span>
+                  <ul>
+                    <li>Portland par 127,Orlando, FL</li>
+                    <li>(123) 456-7891</li>
+                    <li>alice.barkley@example.com</li>
+                  </ul>
+                </span>
+              </div>
             </div>
+            <div class="isolation">
+              <h3 class="resume-title">Education</h3>
 
-            <h3 class="resume-title">Education</h3>
-            <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui
-                ut dignissimos deleniti nerada porti sand markend</p>
-            </div>
-            <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius
-                unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                dila</p>
+              <div class="resume-item">
+                <h4>Bachelors in information technology</h4>
+                <p><em>Our Lady of Lourdes College</em></p>
+                <h5>2019 - 2023</h5>
+                <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum
+                  qui
+                  ut dignissimos deleniti nerada porti sand markend</p>
+              </div>
+
+              <div class="resume-item">
+                <h4>High school</h4>
+                <p><em>Informatics College Caloocan</em></p>
+                <h5>2017 - 2019</h5>
+                <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione
+                  eius
+                  unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
+                  dila</p>
+              </div>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <span>
-                <ul>
-                  <li>Lead in the design, development, and implementation of the graphic, layout, and production
-                    communication materials</li>
-                  <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the
-                    project. </li>
-                  <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the
-                    design</li>
-                  <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-                </ul>
-              </span>
-            </div>
-            <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <span>
-                <ul>
-                  <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and
-                    advertisements).</li>
-                  <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                  <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                  <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-                </ul>
-              </span>
+            <div class="isolation">
+              <h3 class="resume-title">Professional Experience</h3>
+              <div class="resume-item">
+                <h4>CURRENTLY NO WORK EXPERIENCE</h4>
+                <h5>Present</h5>
+                <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit rerum sed quia vel eum doloribus ab
+                    quis excepturi quidem temporibus.</em></p>
+                <span>
+
+                </span>
+              </div>
             </div>
           </div>
         </div>
 
       </div>
-    </section><!-- End Resume Section -->
+    </section>
+    <!-- End Resume Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -395,7 +376,8 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>
+    <!-- End Portfolio Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="Contact">
@@ -428,14 +410,11 @@
 
       </div><!-- End About Me -->
 
-    </section><!-- End Contact Section -->
+    </section>
+    <!-- End Contact Section -->
 
-    <!-- Vendor JS Files -->
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-
-    <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
   </body>
 
 </html>
