--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <a href="index.html"><img src="assets/img/meProfile.png" alt="Jerome Tolentino profile picture"
             class="img-fluid profile" title="Jerome Tolentino Profile Picture"></a>
-        <h1>Jerome Tolentino</h1>
-        <h2>I'm a passionate <span>graphic designer</span> from New York</h2>
+        <h1>Hello I'm <span>Jerome</span></h1>
+        <h2>I'm a passionate <span>web developer &amp; programmer</span> from Philippines</h2>
 
         <nav id="navbar" class="navbar">
           <ul>
