--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/meJerome.jpg" class="img-fluid" alt="">
+            <div class="about-me_img">
+              <img src="assets/img/meJerome.jpg" class="img-fluid" alt="">
+            </div>
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>WEB DEVELOPER</h3>
@@ -211,9 +213,13 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">HTML</li>
+              <li data-filter=".filter-card">CSS/SASS</li>
+              <li data-filter=".filter-web">JS</li>
+              <li data-filter=".filter-web">NODE.JS</li>
+              <li data-filter=".filter-web">PHP</li>
+              <li data-filter=".filter-web">VB.NET</li>
+              <li data-filter=".filter-web">JAVA</li>
             </ul>
           </div>
         </div>
@@ -397,12 +403,8 @@
               <a href="#" class="facebook"><i class="bi bi-facebook"></i>facebook</a>
               <a href="#" class="messenger"><i class="bi bi-messenger"></i>messenger</a>
               <a href="#" class="telegram"><i class="bi bi-telegram"></i>telegram</a>
-              <a href="#" class="telephone"><i class="bi bi-telephone-fill"></i>telephone</a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i>linkedin</a>
               <a href="#" class="email"><i class="bi bi-envelope-at-fill"></i>email</a>
-              <a href="#" class="phone"><i class="bi bi-reception-4"></i><span
-                  style="font-size: 25px; text-align: center;">(+63) 951 9179
-                  283</span></a>
             </div>
 
           </div>
