--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>JeromeMT</title>
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/meProfile.png" rel="icon">
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet">
     <link href="assets/vendor/css/bootstrap.css" rel="stylesheet">
     <link href="assets/vendor/css/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
   </head>
 
@@ -29,33 +30,31 @@
     </div> -->
     <!-- ***** Preloader End ***** -->
 
-    <!-- ======= Header ======= -->
+    <!-- MARK Header -->
     <header id="header">
       <div class="container">
-
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <a href="index.html"><img src="assets/img/meProfile.png" alt="Jerome Tolentino profile picture"
-            class="img-fluid profile" title="Jerome Tolentino Profile Picture"></a>
+        <a href="index.html">
+          <img src="assets/img/meProfile.png" class="img-fluid profile" alt="Jerome Tolentino profile picture"
+            title="Jerome Tolentino Profile Picture">
+        </a>
         <h1>Hello I'm <span>Jerome</span></h1>
         <h2>I'm a passionate <span>web developer &amp; programmer</span> from Philippines</h2>
 
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link active" data-text="Home" href="#header">Home</a></li>
-            <li><a class="nav-link" data-text="About" href="#about">About</a></li>
-            <li><a class="nav-link" data-text="Resume" href="#resume">Resume</a></li>
-            <li><a class="nav-link" data-text="Services" href="#services">Services</a></li>
-            <li><a class="nav-link" data-text="Portfolio" href="#portfolio">Portfolio</a></li>
+            <li><a class="nav-link" data-text="Portfolio" href="#portfolio">My Works</a></li>
             <li><a class="nav-link" data-text="Contact" href="#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
+        </nav>
 
         <div class="social-links">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
           <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="messenger"><i class="bi bi-messenger"></i></a>
+          <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
           <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="#" class="email"><i class="bi bi-envelope-at-fill"></i></a>
         </div>
 
       </div>
@@ -63,156 +62,37 @@
     <!-- End Header -->
 
 
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
-      <!-- ======= About Me ======= -->
-      <div class="about-me container">
-
+    <!-- MARK Technologies Section -->
+    <section id="technologies" class="technologies">
+      <div class="technologies-me container">
         <div class="section-title">
-          <h2><a href="#header">Home <i class="bi bi-chevron-right text-success"></i></a> About</h2>
-          <p>Learn more about me</p>
+          <p>Technologies</p>
         </div>
-
         <div class="row">
-          <div class="col-lg-4">
-            <div class="about-me_img">
-              <img src="assets/img/meJerome.jpg" class="img-fluid" alt="">
-            </div>
-          </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>WEB DEVELOPER</h3>
-            <p class="fst-italic">
-              Highly motivated and adaptable individual with a strong aptitude for technology and a passion for
-              problem-solving. Seeking a challenging role in the IT field to leverage my knowledge of Microsoft Office,
-              computer troubleshooting, and ability to quickly adapt to new technologies. While I may not have formal
-              work experience, I have excellent time management skills, a proactive mindset, and the ability to perform
-              well under pressure. Committed to ongoing learning and professional development, I am eager to contribute
-              effectively to a dynamic team and contribute to the success of the organization.
-
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span>
-                  </li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
-            <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et
-              ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
-              Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ratione laudantium quo suscipit harum
-              possimus! Quo, delectus. Laudantium id nulla non porro dolor eveniet molestiae ullam illum excepturi earum
-              magni animi cumque saepe ipsa velit, sit aut, facilis repellat tempore exercitationem voluptatum esse ea
-              optio asperiores! Voluptate eligendi maiores libero omnis rem. Vero, accusantium itaque. Optio impedit
-              facilis commodi doloremque mollitia culpa at soluta nam, deserunt minima, quia maxime labore hic, animi
-              quisquam. Nisi ducimus quam eius beatae praesentium culpa quis vel quod repellat laudantium, numquam autem
-              animi esse ipsum aliquid maiores possimus dolor quibusdam facere porro. Totam, eveniet aliquam.</p>
-          </div>
-        </div>
-
-      </div><!-- End About Me -->
-
-    </section>
-    <!-- End About Section -->
-
-    <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2><a href="#header">Home <i class="bi bi-chevron-right text-success"></i></a> resume</h2>
-          <p>Check My Resume</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="isolation">
-              <h3 class="resume-title">Sumary</h3>
-              <div class="resume-item pb-0">
-                <h4>Alice Barkley</h4>
-                <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and
-                    developing user-centered digital/print marketing material from initial concept to final, polished
-                    deliverable.</em></p>
-                <span>
-                  <ul>
-                    <li>Portland par 127,Orlando, FL</li>
-                    <li>(123) 456-7891</li>
-                    <li>alice.barkley@example.com</li>
-                  </ul>
-                </span>
-              </div>
-            </div>
-            <div class="isolation">
-              <h3 class="resume-title">Education</h3>
-
-              <div class="resume-item">
-                <h4>Bachelors in information technology</h4>
-                <p><em>Our Lady of Lourdes College</em></p>
-                <h5>2019 - 2023</h5>
-                <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum
-                  qui
-                  ut dignissimos deleniti nerada porti sand markend</p>
-              </div>
-
-              <div class="resume-item">
-                <h4>High school</h4>
-                <p><em>Informatics College Caloocan</em></p>
-                <h5>2017 - 2019</h5>
-                <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione
-                  eius
-                  unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart
-                  dila</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="isolation">
-              <h3 class="resume-title">Professional Experience</h3>
-              <div class="resume-item">
-                <h4>CURRENTLY NO WORK EXPERIENCE</h4>
-                <h5>Present</h5>
-                <p><em>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit rerum sed quia vel eum doloribus ab
-                    quis excepturi quidem temporibus.</em></p>
-                <span>
-
-                </span>
+          <div class="col-lg-8 pt-4 pt-lg-0">
+            <div class="content">
+              <div class="technologies-icon">
+                <img src="https://skillicons.dev/icons?i=html,css,js,php,mysql,mongodb,express,nodejs,bootstrap," />
               </div>
             </div>
           </div>
         </div>
-
       </div>
     </section>
-    <!-- End Resume Section -->
+    <!-- End technologies Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+    <!-- MARK Portfolio Section -->
     <section id="portfolio" class="portfolio">
       <div class="container">
-
         <div class="section-title">
           <h2><a href="#header">Home <i class="bi bi-chevron-right text-success"></i></a> portfolio </h2>
           <p>My Works</p>
         </div>
-
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-card">Recent</li>
               <li data-filter=".filter-app">HTML</li>
               <li data-filter=".filter-card">CSS/SASS</li>
               <li data-filter=".filter-web">JS</li>
@@ -223,23 +103,18 @@
             </ul>
           </div>
         </div>
-
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
+              <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                class="portfolio-details-lightbox" title="Portfolio Details"><img
+                  src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Web 123</h4>
+                  <p>Web 123</p>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -311,71 +186,16 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
+              <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                class="portfolio-details-lightbox" title="Portfolio Details"><img
+                  src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Web 123</h4>
+                  <p>Web 123</p>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -385,20 +205,14 @@
     </section>
     <!-- End Portfolio Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!--MARK Contact Section ======= -->
     <section id="contact" class="Contact">
-      <!-- ======= Contact Me ======= -->
       <div class="contact container">
-
         <div class="row">
-          <div class="col-lg-4">
-            <img src="assets/img/meProfile.png" class="img-fluid connect-profile" alt="">
+          <div class="section-title">
+            <h1>CONNECT WITH ME</h1>
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>CONNECT WITH ME</h3>
-
-
-
+          <div class="pt-4 pt-lg-0 links">
             <div class="social-links">
               <a href="#" class="facebook"><i class="bi bi-facebook"></i>facebook</a>
               <a href="#" class="messenger"><i class="bi bi-messenger"></i>messenger</a>
@@ -406,16 +220,39 @@
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i>linkedin</a>
               <a href="#" class="email"><i class="bi bi-envelope-at-fill"></i>email</a>
             </div>
-
           </div>
+
+          <form action="forms/contact.php" method="post" role="form" class="mt-4">
+            <div class="row">
+              <div class="col-md-6 form-group">
+                <input autocomplete="off" type="text" name="name" class="form-control" id="name" placeholder="Your Name"
+                  required>
+              </div>
+              <div class="col-md-6 form-group mt-3 mt-md-0">
+                <input autocomplete="off" type="email" class="form-control" name="email" id="email"
+                  placeholder="Your Email" required>
+              </div>
+            </div>
+            <div class="form-group mt-3">
+              <input autocomplete="off" type="text" class="form-control" name="subject" id="subject"
+                placeholder="Subject" required>
+            </div>
+            <div class="form-group mt-3">
+              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary form-control">Send Message</button>
+            </div>
+          </form>
         </div>
-
-      </div><!-- End About Me -->
-
+        <h6 class="footer">♥ Designed &amp; Built by <span>Jerome</span> ♥</h6>
+      </div>
     </section>
     <!-- End Contact Section -->
 
+    <script src="assets/vendor/jquery/jquery-3.6.0.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 
