--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link active" data-text="Home" href="#header">Home</a></li>
-            <li><a class="nav-link" data-text="Portfolio" href="#portfolio">My Works</a></li>
+            <li><a class="nav-link" data-text="My Works" href="#portfolio">My Works</a></li>
             <li><a class="nav-link" data-text="Contact" href="#contact">Contact</a></li>
           </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
 
         <div class="social-links">
