--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link active" data-text="Home" href="#header">Home</a></li>
-            <li><a class="nav-link" data-text="My Works" href="#portfolio">My Works</a></li>
+            <li><a class="nav-link" data-text="My Works" href="#project">My Works</a></li>
             <li><a class="nav-link" data-text="Contact" href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -80,16 +80,16 @@
     </section>
     <!-- End technologies Section -->
 
-    <!-- MARK Portfolio Section -->
-    <section id="portfolio" class="portfolio">
+    <!-- MARK project Section -->
+    <section id="project" class="project">
       <div class="container">
         <div class="section-title">
-          <h2><a href="#header">Home <i class="bi bi-chevron-right text-success"></i></a> portfolio </h2>
+          <h2><a href="#header">Home <i class="bi bi-chevron-right text-success"></i></a> project </h2>
           <p>My Works</p>
         </div>
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
+            <ul id="project-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-card">Recent</li>
               <li data-filter=".filter-app">HTML</li>
@@ -102,14 +102,14 @@
             </ul>
           </div>
         </div>
-        <div class="row portfolio-container">
+        <div class="row project-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                class="portfolio-details-lightbox" title="Portfolio Details"><img
-                  src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
+          <div class="col-lg-4 col-md-6 project-item filter-web">
+            <div class="project-wrap">
+              <a href="project-details.html" data-gallery="projectDetailsGallery" data-glightbox="type: external"
+                class="project-details-lightbox" title="project Details"><img src="assets/img/project/portfolio-9.jpg"
+                  class="img-fluid" alt="">
+                <div class="project-info">
                   <h4>Web 123</h4>
                   <p>Web 123</p>
                 </div>
@@ -117,80 +117,76 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
+          <div class="col-lg-4 col-md-6 project-item filter-web">
+            <div class="project-wrap">
+              <img src="assets/img/project/portfolio-2.jpg" class="img-fluid" alt="">
+              <div class="project-info">
                 <h4>Web 3</h4>
                 <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
+                <div class="project-links">
+                  <a href="assets/img/project/portfolio-2.jpg" data-gallery="projectGallery" class="project-lightbox"
+                    title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="project-details.html" data-gallery="projectDetailsGallery" data-glightbox="type: external"
+                    class="project-details-lightbox" title="project Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
+          <div class="col-lg-4 col-md-6 project-item filter-app">
+            <div class="project-wrap">
+              <img src="assets/img/project/portfolio-3.jpg" class="img-fluid" alt="">
+              <div class="project-info">
                 <h4>App 2</h4>
                 <p>App</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
+                <div class="project-links">
+                  <a href="assets/img/project/portfolio-3.jpg" data-gallery="projectGallery" class="project-lightbox"
+                    title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="project-details.html" data-gallery="projectDetailsGallery" data-glightbox="type: external"
+                    class="project-details-lightbox" title="project Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
+          <div class="col-lg-4 col-md-6 project-item filter-card">
+            <div class="project-wrap">
+              <img src="assets/img/project/portfolio-4.jpg" class="img-fluid" alt="">
+              <div class="project-info">
                 <h4>Card 2</h4>
                 <p>Card</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
+                <div class="project-links">
+                  <a href="assets/img/project/portfolio-4.jpg" data-gallery="projectGallery" class="project-lightbox"
+                    title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="project-details.html" data-gallery="projectDetailsGallery" data-glightbox="type: external"
+                    class="project-details-lightbox" title="project Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
+          <div class="col-lg-4 col-md-6 project-item filter-web">
+            <div class="project-wrap">
+              <img src="assets/img/project/portfolio-5.jpg" class="img-fluid" alt="">
+              <div class="project-info">
                 <h4>Web 2</h4>
                 <p>Web</p>
-                <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                    class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery"
-                    data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
-                      class="bx bx-link"></i></a>
+                <div class="project-links">
+                  <a href="assets/img/project/portfolio-5.jpg" data-gallery="projectGallery" class="project-lightbox"
+                    title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="project-details.html" data-gallery="projectDetailsGallery" data-glightbox="type: external"
+                    class="project-details-lightbox" title="project Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap">
-              <a href="portfolio-details.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                class="portfolio-details-lightbox" title="Portfolio Details"><img
-                  src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                <div class="portfolio-info">
+          <div class="col-lg-4 col-md-6 project-item filter-web">
+            <div class="project-wrap">
+              <a href="project-details.html" data-gallery="projectDetailsGallery" data-glightbox="type: external"
+                class="project-details-lightbox" title="project Details"><img src="assets/img/project/portfolio-9.jpg"
+                  class="img-fluid" alt="">
+                <div class="project-info">
                   <h4>Web 123</h4>
                   <p>Web 123</p>
                 </div>
@@ -202,7 +198,7 @@
 
       </div>
     </section>
-    <!-- End Portfolio Section -->
+    <!-- End project Section -->
 
     <!--MARK Contact Section ======= -->
     <section id="contact" class="Contact">
