--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
 
     <!-- ***** Preloader Start ***** -->
-    <!-- <div id="js-preloader" class="js-preloader">
+    <div id="js-preloader" class="js-preloader">
       <div class="preloader-inner">
         <span class="dot"></span>
         <div class="dots">
@@ -27,7 +27,7 @@
           <span></span>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- ***** Preloader End ***** -->
 
     <!-- MARK Header -->
@@ -38,7 +38,7 @@
             title="Jerome Tolentino Profile Picture">
         </a>
         <h1>Hello I'm <span>Jerome</span></h1>
-        <h2>I'm a passionate <span>web developer &amp; programmer</span> from Philippines</h2>
+        <h2><span>web developer &amp; programmer</span> </h2>
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -47,15 +47,6 @@
             <li><a class="nav-link" data-text="Contact" href="#contact">Contact</a></li>
           </ul>
         </nav>
-
-        <div class="social-links">
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="messenger"><i class="bi bi-messenger"></i></a>
-          <a href="#" class="telegram"><i class="bi bi-telegram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          <a href="#" class="email"><i class="bi bi-envelope-at-fill"></i></a>
-        </div>
-
       </div>
     </header>
     <!-- End Header -->
@@ -71,7 +62,12 @@
           <div class="col-lg-8 pt-4 pt-lg-0">
             <div class="content">
               <div class="technologies-icon">
-                <img src="https://skillicons.dev/icons?i=html,css,js,php,mysql,mongodb,express,nodejs,bootstrap," />
+                <img src="assets/img/svg skills/html.svg" class="skill" alt="html">
+                <img src="assets/img/svg skills/css.svg" class="skill" alt="css">
+                <img src="assets/img/svg skills/javascript.svg" class="skill" alt="javascript">
+                <img src="assets/img/svg skills/bootstrap.svg" class="skill" alt="bootstrap">
+                <img src="assets/img/svg skills/php-dark.svg" class="skill" alt="php">
+                <img src="assets/img/svg skills/figma-dark.svg" class="skill" alt="figma">
               </div>
             </div>
           </div>
@@ -117,7 +113,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 project-item filter-web">
+          <div class="col-lg-4 col-md-6 project-item filter-web filter-app">
             <div class="project-wrap">
               <img src="assets/img/project/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="project-info">
@@ -209,9 +205,6 @@
           </div>
           <div class="pt-4 pt-lg-0 links">
             <div class="social-links">
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i>facebook</a>
-              <a href="#" class="messenger"><i class="bi bi-messenger"></i>messenger</a>
-              <a href="#" class="telegram"><i class="bi bi-telegram"></i>telegram</a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i>linkedin</a>
               <a href="#" class="email"><i class="bi bi-envelope-at-fill"></i>email</a>
             </div>
