--- a/index.html
+++ b/index.html
@@ -40,20 +40,14 @@
               <h1>Hello I'm <span>Jerome</span></h1>
               <h2><span>web developer &amp; programmer</span> </h2>
             </div>
-            <!-- <nav id="navbar" class="navbar">
-              <ul>
-                <li><a class="nav-link active" data-text="Home" href="#header">Home</a></li>
-                <li><a class="nav-link" data-text="My Works" href="#project">My Works</a></li>
-                <li><a class="nav-link" data-text="Contact" href="#contact">Contact</a></li>
-              </ul>
-            </nav> -->
+
             <div class="technologies-icon">
-              <img src="assets/img/svg skills/html.svg" class="skill" alt="html">
-              <img src="assets/img/svg skills/css.svg" class="skill" alt="css">
-              <img src="assets/img/svg skills/javascript.svg" class="skill" alt="javascript">
-              <img src="assets/img/svg skills/bootstrap.svg" class="skill" alt="bootstrap">
-              <img src="assets/img/svg skills/php-dark.svg" class="skill" alt="php">
-              <img src="assets/img/svg skills/figma-dark.svg" class="skill" alt="figma">
+              <iconify-icon height="2em" icon="skill-icons:html"></iconify-icon>
+              <iconify-icon height="2em" icon="skill-icons:css"></iconify-icon>
+              <iconify-icon height="2em" icon="skill-icons:javascript"></iconify-icon>
+              <iconify-icon height="2em" icon="mdi:bootstrap"></iconify-icon>
+              <iconify-icon height="2em" icon="skill-icons:php-light"></iconify-icon>
+              <iconify-icon height="2em" icon="skill-icons:figma-dark"></iconify-icon>
             </div>
           </div>
         </header>
